--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "connected-react-router": "^6.6.1",
     "history": "^4.10.1",
+    "jest-styled-components": "^7.0.1",
     "jss": "^10.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
